# octree-file-format-mirror

./: .appveyor.yml  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  binaryrw.hpp  build-octreegen-appimage.sh
cmake/common/: Doc.cmake  SetupCompiler.cmake  SystemName.cmake  Uninstall.cmake
include/: Leaf.hpp  Octree.hpp  binaryrw.hpp  utils.hpp
liboctree/: CMakeLists.txt  README.md
liboctree/doc/: Doxyfile.in
liboctree/include/: Leaf.hpp  Octree.hpp  binaryrw.hpp
liboctree/src/: Leaf.cpp  Octree.cpp
liboctree/test/: test-main.cpp
octreegen/: CMakeLists.txt  README.md  build-ubuntu-13.10.sh  make-appimage.sh  octreegen.desktop
octreegen-gui/: CMakeLists.txt  README.md
octreegen-gui/include/: HDF5DatasetSelect.hpp  MainWindow.hpp  mainwindow.hpp  utils.hpp
octreegen-gui/src/: HDF5DatasetSelect.cpp  MainWindow.cpp  main.cpp  mainwindow.cpp  utils.cpp
octreegen/include/: Leaf.hpp  handle_arguments.hpp  utils.hpp
octreegen/src/: Leaf.cpp  Octree.cpp  handle_arguments.cpp  main.cpp  utils.cpp
octreegen/test/: tests-main.cpp
src/: Leaf.cpp  Octree.cpp  binaryrw.cpp  main.cpp  utils.cpp
test/: tests-main.cpp
toHDF5utils/: convert_boss_observations.py  convert_csv.py  convert_orb5.py
